# noctalia

./: CONTRIBUTING.md  README.md  example.toml  justfile  meson.build  meson_options.txt  noctalia.scm
.github/workflows/: ci.yml
assets/scripts/: screen_recorder.lua
assets/translations/: be-Latn.json  be.json  ca.json  cs.json  de.json  en.json  es.json  fr.json  hu.json  it.json  ku.json  nl.json  nn.json  pl.json  pt-BR.json  ru.json  uk-UA.json  vi.json  zh-Hans.json
nix/: hjem-module.nix  home-module.nix  package.nix
src/app/: application.cpp  application.h  application_ipc.cpp  application_services.cpp  application_ui.cpp  main_loop.cpp
src/auth/: fingerprint_authenticator.cpp  fingerprint_authenticator.h  pam_authenticator.cpp  pam_authenticator.h
src/calendar/: caldav_client.cpp  caldav_client.h  caldav_discovery.cpp  calendar_discovery_state.cpp  calendar_discovery_state.h  calendar_service.cpp  calendar_service.h  calendar_types.h
src/capture/: screencopy_capture.cpp  screenshot_service.cpp
src/compositors/: workspace_alert_service.cpp
src/config/: cli.cpp  color_spec.h  config_migrations.cpp  config_migrations.h  config_overrides.cpp  config_service.cpp  config_service.h  config_types.cpp  config_types.h  config_validate.cpp  config_validate.h  state_store.cpp  (+2 more)
tests/: calendar_discovery_state_test.cpp  config_migration_test.cpp  config_schema_roundtrip_test.cpp  input_password_mode_test.cpp  log_test.cpp  notification_filter_test.cpp  plugin_source_paths_test.cpp  state_store_test.cpp  time_format_test.cpp
tools/: notifications-test.sh
(+284 files in other folders)
